# tinkoff-invest-sdk-rs

./: .gitmodules  Cargo.toml  build.rs  justfile  readme.md
.github/workflows/: rust.yml
examples/: Cargo.toml  instruments.rs
examples/instruments/: bond_by.rs  bonds.rs  trading_schedules.rs
examples/users/: get_accounts.rs  get_info.rs  get_margin_attributes.rs  get_user_tariff.rs
src/: lib.rs  main.rs
src/api/: .gitignore  mod.rs
tinkoff-invest-grpc/: .gitignore  .gitmodules  Cargo.toml  build.rs  justfile  readme.md
tinkoff-invest-grpc/src/: lib.rs
tinkoff-invest-sdk/: Cargo.toml  build.rs  readme.md
tinkoff-invest-sdk/src/: instruments.rs  lib.rs  shared.rs  types.rs  users.rs
tinkoff-invest-sdk/src/types/: margin_attributes.rs  mod.rs  trading_schedule.rs  user_info.rs
