[package]
name = "tinkoff-invest-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.0"
prost-types = "0.11"
rust_decimal = "1.25.0"
rust_decimal_macros = "1.25.0"
tonic = { version = "0.8.0", features = ["tls", "tls-webpki-roots"] }

[build-dependencies]
tonic-build = "0.8"
