[package]
name = "tinkoff-invest-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinkoff-invest-grpc = { version = "0.1", path = "../tinkoff-invest-grpc" }
tonic = "0.8.0"
chrono = "0.4.20"

[build-dependencies]
regex = "1.6.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
